--- a/style.css
+++ b/style.css
@@ -45,6 +45,17 @@ body {
     min-height: 34rem;
 }
 
+.emojis {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size:100px;
+}
+
+.emoji {
+    font-size:50px;
+}
+
 .group {
     display: flex;
     justify-content: space-between;
